# manim-plugintemplate

./: README.md  README.rst  pyproject.toml
src/manim_plugintemplate/: __init__.py  custom_mobject.py
src/manim_plugintemplate/mobjects/: dotgrid.py
tests/: test_manim_plugintemplate.py
