[tool.poetry]
name = "manim-PluginTemplate"
version = "0.1.1"
description = "A template project to both illustrate and serve as an example for plugin creations on top of the manim (community edition) engine."
license = "MIT"
authors = ["Jason G. Villanueva <a@jsonvillanueva.com>"]
readme = "README.rst"
repository = "https://gitlab.com/jsonV/manim-PluginTemplate"

[tool.poetry.dependencies]
python = "^3.6"
manim = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
