[tool.poetry]
name = "manim-PluginTemplate"
version = "0.1.3"
description = "A template project to both illustrate and serve as an example for plugin creations on top of the manim (community edition) engine."
license = "MIT"
authors = ["The Manim Community Developers","Jason G. Villanueva <a@jsonvillanueva.com>"]
readme = "README.rst"
repository = "https://github.com/ManimCommunity/manim-plugintemplate"

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]

[tool.poetry.plugins."manim.plugins"]
"manim_plugintemplate" = "manim_plugintemplate"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
